Add CSS, modify HTMLs, add model class Doctor, add appoint/urls.py

--- a/main/appoint/templates/appoint/index.html
+++ b/main/appoint/templates/appoint/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'appoint/layout.html' %}
 
-</body>
-</html>
+{% block Title %}Doctor appointment{% endblock %}
+
+{% block BodyContent %}
+
+{% endblock %}
