--- a/main/appoint/templates/appoint/layout.html
+++ b/main/appoint/templates/appoint/layout.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>{% block Title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'appoint/css/appoint.css' %}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
