--- a/main/appoint/static/appoint/css/appoint.css
+++ b/main/appoint/static/appoint/css/appoint.css
@@ -1,3 +1,10 @@
+
+body {
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+}
+
 header {
     float: top;
     padding: 0;
@@ -36,5 +43,12 @@ header nav a {
 
 header nav a:hover {
     color: #64150C;
+}
+
+div.index-doctor-list {
+    position: relative;
+    top: 100px;
+
+    width: 100%;
 }
 
