--- a/main/appoint/templates/appoint/index.html
+++ b/main/appoint/templates/appoint/index.html
@@ -3,5 +3,15 @@
 {% block Title %}Doctor appointment{% endblock %}
 
 {% block BodyContent %}
-
+    <div class="index-doctor-list">
+        {% if doctors_list %}
+            <ul>
+                {% for doctor in doctors_list %}
+                    <li><a href="{% url 'appoints' doctor.id %}">{{ doctor.get_full_name }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <h1>There's no any Doctors</h1>
+        {% endif %}
+    </div>
 {% endblock %}
