Modify doctor_appoints view and url

--- a/main/appoint/templates/appoint/appoint.html
+++ b/main/appoint/templates/appoint/appoint.html
@@ -1,3 +1,9 @@
 {% extends 'appoint/layout.html' %}
 
-{% block Title %} {% endblock %}
+{% block Title %}{{ title }}{% endblock %}
+
+{% block BodyContent %}
+    <div class="appoint-grid">
+        
+    </div>
+{% endblock%}
