--- a/main/appoint/templates/appoint/index.html
+++ b/main/appoint/templates/appoint/index.html
@@ -7,7 +7,7 @@
         {% if doctors_list %}
             <ul>
                 {% for doctor in doctors_list %}
-                    <li><a href="{% url 'appoints' doctor.id %}">{{ doctor.get_full_name }}</a></li>
+                    <li><a href="{% url 'doctor_appoints' doctor.id %}">{{ doctor.get_full_name }}</a></li>
                 {% endfor %}
             </ul>
         {% else %}
