--- a/main/appoint/templates/appoint/layout.html
+++ b/main/appoint/templates/appoint/layout.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block Title %}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'appoint/css/appoint.css' %}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="{% static 'appoint/img/doctor_appoint_logo_200x200.png' %}" alt="logo">
+        <a href="{% url 'index' %}"><img src="{% static 'appoint/img/doctor_appoint_logo_200x200.png' %}" alt="logo"></a>
         <nav>
             <a href="{% url 'admin:index' %}">Admin panel</a>
         </nav>
