--- a/main/appoint/templates/appoint/appoint_detail.html
+++ b/main/appoint/templates/appoint/appoint_detail.html
@@ -4,11 +4,9 @@
 
 {% block BodyContent %}
     <div class="appoint-detail">
-        <div class="container">
-            <h1>{{ appoint_obj.start_time }}</h1>
-            <h1>{{ appoint_obj.end_time }}</h1>
-            <h2>{{ appoint_obj.date }}</h2>
+            <h1>{{ appoint_obj.start_time|time:"H:i" }}</h1>
+            <h1>{{ appoint_obj.end_time|time:"H:i" }}</h1>
+            <h2>{{ appoint_obj.date|date:"j N Y" }}</h2>
             <h1>{{ appoint_obj.doctor.get_full_name }}</h1>
-        </div>
     </div>
 {% endblock %}
