--- a/main/appoint/templates/appoint/appoint_detail.html
+++ b/main/appoint/templates/appoint/appoint_detail.html
@@ -4,9 +4,15 @@
 
 {% block BodyContent %}
     <div class="appoint-detail">
-            <h1>{{ appoint_obj.start_time|time:"H:i" }}</h1>
-            <h1>{{ appoint_obj.end_time|time:"H:i" }}</h1>
-            <h2>{{ appoint_obj.date|date:"j N Y" }}</h2>
-            <h1>{{ appoint_obj.doctor.get_full_name }}</h1>
+        <h1>{{ appoint.start_time|time:"H:i" }}</h1>
+        <h1>{{ appoint.end_time|time:"H:i" }}</h1>
+        <h2>{{ appoint.date|date:"j N Y" }}</h2>
+        <h1>{{ appoint.doctor.get_full_name }}</h1><br>
+
+        {% if appoint.check_appointment_empty_customer %}
+            <a href="{% url 'make_appoint' appoint.doctor.id appoint.id %}" class="btn btn-primary" role="button">Make appoint</a>
+        {% else %}
+            <h1>{{ appoint.customer.get_full_name }}</h1>
+        {% endif %}
     </div>
 {% endblock %}
