--- a/main/appoint/templates/appoint/appoint.html
+++ b/main/appoint/templates/appoint/appoint.html
@@ -2,7 +2,9 @@
 
 {% block Title %}{{ title }}{% endblock %}
 
-{% block HeaderTitle%}{{ doctor_name }}{% endblock %}
+{% block HeaderTitle %}
+    <a href="{% url 'index' %}">To main</a>
+{% endblock %}
 
 {% block BodyContent %}
     {% if appoints_list %}
@@ -12,12 +14,27 @@
                     <h4>{{ columns.0.date|date:"l" }}</h4>
                     <p>{{ columns.0.date|date:"d N" }}</p>
                     {% for appoint in columns %}
-                        <div class="row"><a href="{% url 'appoint_detail' doctor_id appoint.id %}">{{ appoint.start_time|time:"H:i" }}</a></div>
+                        <div class="row">
+                            {% if appoint.check_appointment_empty_customer %}
+                                {% if not appoint.is_outdated %}
+                                    <a href="{% url 'appoint_detail' doctor_id appoint.id %}">{{ appoint.start_time|time:"H:i" }}</a>
+                                {% else %}
+                                    <p>{{ appoint.start_time|time:"H:i" }}</p>
+                                {% endif %}
+                            {% else %}
+                                <p>{{ appoint.start_time|time:"H:i" }}</p>
+                            {% endif %}
+                        </div>
                     {% endfor %}
                 </div>
             {% endfor %}
+            <footer>
+                {% block ButtonPrevWeek %}
+                <a href="{% url 'doctor_appoints_with_day' doctor_id next_week %}" class="btn btn-info" role="button">Next week</a>
+                {% endblock ButtonPrevWeek %}
+            </footer>
         </div>
     {% else %}
         <h1>There's none any appointments</h1>
     {% endif %}
-{% endblock%}
+{% endblock %}
