--- a/main/appoint/static/appoint/css/appoint.css
+++ b/main/appoint/static/appoint/css/appoint.css
@@ -1,43 +1,40 @@
 
 body {
-    height: 100vh;
     width: 100%;
     margin: 0;
 }
 
-header {
-    float: top;
-    padding: 0;
+.page {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     background: #66cc99;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 98px;
+    height: 100px;
     border-bottom: 2px solid #669999;
+    flex-direction: row;
+
+    overflow: hidden;
+    white-space: initial;
 }
 
-header h3 {
-    position: absolute;
-    left: 250px;
-    margin: 0;
-}
-
-header nav {
+.header-nav, .header-link {
     text-align: left;
     font-family: 'Poppins', sans-serif;
 }
 
-header nav a {
+.header-nav a, .header-link {
     font-size: 28px;
 
     display: inline-block;
-    margin: 0 15px;
+    margin: 0 25px;
 
     color: #0c3f66;
     background-color: #66cc99;
@@ -47,14 +44,13 @@ header nav a {
     position: relative;
 }
 
-header nav a:hover {
+.header-nav a:hover, .header-link:hover {
     color: #64150C;
 }
 
 .BodyContent {
-    position: relative;
-    top: 98px;
     width: 100%;
+    padding: 10px;
 }
 
 .container {
@@ -82,7 +78,6 @@ header nav a:hover {
 
 .row {
     margin: 0 0;
-
     background: #EBDEF0;
     border: 2px solid #669999;
 }
@@ -93,4 +88,38 @@ header nav a:hover {
 
 .make-appoint {
 
+}
+
+.doctor_detail h1, h4 {
+    margin: 0 0 8px;
+}
+
+.doctor_detail_info {
+    margin: 15px 0;
+    max-width: 650px;
+}
+
+.customer_detail {
+    margin: 0 0 8px;
+}
+
+.footer {
+    margin-top: auto;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row;
+    padding: 5px 10px;
+
+    background: #66cc99;
+    border-top: 2px solid #669999;
+
+    overflow: hidden;
+    white-space: initial;
+}
+
+.footer a {
+    display: inline-block;
+    margin: 0 5px;
 }
