--- a/main/appoint/static/appoint/css/appoint.css
+++ b/main/appoint/static/appoint/css/appoint.css
@@ -25,12 +25,12 @@ body {
     white-space: initial;
 }
 
-.header-nav, .header-link {
+.header_nav, .header_nav_account {
     text-align: left;
     font-family: 'Poppins', sans-serif;
 }
 
-.header-nav a, .header-link {
+.header_nav a, .header_nav_account a {
     font-size: 28px;
 
     display: inline-block;
@@ -44,13 +44,17 @@ body {
     position: relative;
 }
 
-.header-nav a:hover, .header-link:hover {
+.header_nav a:hover, .header_nav_account a:hover {
     color: #64150C;
 }
 
 .BodyContent {
     width: 100%;
     padding: 10px;
+}
+
+.body_content_form a, .body_content_form button {
+    margin: 15px 0 0;
 }
 
 .container {
@@ -77,7 +81,7 @@ body {
 }
 
 .row {
-    margin: 0 0;
+    margin: 0;
     background: #EBDEF0;
     border: 2px solid #669999;
 }
