--- a/main/userauth/templates/registration/login.html
+++ b/main/userauth/templates/registration/login.html
@@ -3,6 +3,10 @@
 
 {% block Title %}Login{% endblock %}
 
+{% block HeaderTitle %}
+    <a href="{% url 'index' %}">To main</a>
+{% endblock %}
+
 {% block BodyContent %}
     <div class="body_content_form">
         <form method="post" class="form-group">
