Rename customer_detail.html into user_detail.html and modify user_detail.html

--- a/main/appoint/templates/appoint/appoint_detail.html
+++ b/main/appoint/templates/appoint/appoint_detail.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block BodyContent %}
-    <div class="appoint-detail">
+    <div class="appoint_detail">
         <h1>Start time: {{ appoint.start_time|time:"H:i" }}</h1>
         <h1>End time: {{ appoint.end_time|time:"H:i" }}</h1>
         <h2>Date: {{ appoint.date|date:"j N Y" }}</h2>
