--- a/main/appoint/static/appoint/css/appoint.css
+++ b/main/appoint/static/appoint/css/appoint.css
@@ -86,11 +86,11 @@ body {
     border: 2px solid #669999;
 }
 
-.appoint-detail {
+.appoint_detail {
 
 }
 
-.make-appoint {
+.make_appoint {
 
 }
 
@@ -103,7 +103,7 @@ body {
     max-width: 650px;
 }
 
-.customer_detail {
+.user_detail {
     margin: 0 0 8px;
 }
 
