Remove migrations, create new Models

--- a/main/appoint/templates/appoint/make_appoint.html
+++ b/main/appoint/templates/appoint/make_appoint.html
@@ -3,12 +3,12 @@
 {% block Title %}{{ title }}{% endblock %}
 
 {% block HeaderTitle %}
-    <a href="{% url 'appoint_detail' appoint.doctor.id appoint.id %}">Back to appointment</a>
+    <a href="{% url 'appoint_detail' appoint.doctor.user.id appoint.id %}">Back to appointment</a>
 {% endblock %}
 
 {% block BodyContent %}
     <div class="make_appoint">
-        {{ appoint.doctor.get_full_name }}<br>
+        {{ appoint.doctor_user.get_full_name }}<br>
         {{ appoint.date|date:"j N Y" }}<br>
         {{ appoint.start_time|time:"H:i" }} - {{ appoint.end_time|time:"H:i" }}<br><br>
 
