--- a/main/userauth/templates/registration/login.html
+++ b/main/userauth/templates/registration/login.html
@@ -15,6 +15,7 @@
             <button type="submit" class="btn btn-success">Login</button>
             <br>
             <a href="{% url 'register' %}" class="btn btn-light" role="button">Create account</a>
+            <a href="{% url 'register_doctor' %}" class="btn btn-light" role="button">Create doctor</a>
         </form>
     </div>
 {% endblock BodyContent %}
