--- a/main/userauth/templates/registration/logout.html
+++ b/main/userauth/templates/registration/logout.html
@@ -1,3 +1,4 @@
+<!--useless template in that version of project
 {% extends 'appoint/layout.html' %}
 {% load crispy_forms_tags %}
 
@@ -5,4 +6,4 @@
 
 {% block BodyContent %}
     HEy
-{% endblock BodyContent %}
+{% endblock BodyContent %}-->
