--- a/main/appoint/templates/appoint/appoint_detail.html
+++ b/main/appoint/templates/appoint/appoint_detail.html
@@ -3,7 +3,7 @@
 {% block Title %}{{ title }}{% endblock %}
 
 {% block HeaderTitle %}
-    <a href="{% url 'doctor_appoints' appoint.doctor.id %}">{{ appoint.doctor.get_full_name }}</a>
+    <a href="{% url 'doctor_appoints' appoint.doctor_user.user.id %}">{{ appoint.doctor_user.get_full_name }}</a>
 {% endblock %}
 
 {% block BodyContent %}
@@ -11,7 +11,7 @@
         <h1>Start time: {{ appoint.start_time|time:"H:i" }}</h1>
         <h1>End time: {{ appoint.end_time|time:"H:i" }}</h1>
         <h2>Date: {{ appoint.date|date:"j N Y" }}</h2>
-        <h1>Doctor: {{ appoint.doctor.get_full_name }}</h1>
+        <h1>Doctor: {{ appoint.doctor_user.get_full_name }}</h1>
 
         {% if not appoint.check_appointment_empty_customer %}
             <h1>Customer: {{ appoint.user.get_full_name }}</h1>
@@ -22,7 +22,7 @@
 {% block Footer %}
     {% if appoint.check_appointment_empty_customer %}
         {% if not appoint.is_outdated %}
-            <a href="{% url 'make_appoint' appoint.doctor.id appoint.id %}" class="btn btn-light" role="button">Make appoint</a>
+            <a href="{% url 'make_appoint' appoint.doctor_user.user.id appoint.id %}" class="btn btn-light" role="button">Make appoint</a>
         {% else %}
             <h1>Appoint is outdated</h1>
         {% endif %}
