--- a/main/appoint/templates/appoint/doctor_detail.html
+++ b/main/appoint/templates/appoint/doctor_detail.html
@@ -1,6 +1,6 @@
 {% extends 'appoint/layout.html' %}
 
-{% block Title %}{{ doctor_obj.get_full_name }}{% endblock %}
+{% block Title %}{{ doctor.get_full_name }}{% endblock %}
 
 {% block HeaderTitle %}
     <a href="{% url 'index' %}">To main</a>
@@ -8,8 +8,8 @@
 
 {% block BodyContent %}
     <div class="doctor_detail">
-        <h1>{{ doctor_obj.get_full_name }}</h1>
-        <h4>{{ doctor_obj.specialization }}</h4>
+        <h1>{{ doctor.get_full_name }}</h1>
+        <h4>{{ doctor.specialization }}</h4>
 
         <div class="doctor_detail_info">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -22,5 +22,5 @@
 {% endblock %}
 
 {% block Footer %}
-    <a href="{% url 'doctor_appoints' doctor_obj.id %}" class="btn btn-warning" role="button">Show appointments</a>
+    <a href="{% url 'doctor_appoints' doctor.user.id %}" class="btn btn-warning" role="button">Show appointments</a>
 {% endblock Footer %}
