--- a/main/appoint/templates/appoint/make_appoint.html
+++ b/main/appoint/templates/appoint/make_appoint.html
@@ -3,20 +3,20 @@
 {% block Title %}{{ title }}{% endblock %}
 
 {% block HeaderTitle %}
-    <a href="{% url 'appoint_detail' appoint.doctor.user.id appoint.id %}">Back to appointment</a>
+    <a href="{% url 'appoint_detail' appoint.doctor.pk appoint.pk %}">Back to appointment</a>
 {% endblock %}
 
 {% block BodyContent %}
     <div class="make_appoint">
-        {{ appoint.doctor_user.get_full_name }}<br>
+        {{ appoint.doctor.get_full_name }}<br>
         {{ appoint.date|date:"j N Y" }}<br>
         {{ appoint.start_time|time:"H:i" }} - {{ appoint.end_time|time:"H:i" }}<br><br>
 
         <form method="post">
             {% csrf_token %}
             <span>{{ error_text }}</span>
-            {{ user.first_name }}<br>
-            {{ user.last_name }}<br>
+            {{ customer.first_name }}<br>
+            {{ customer.last_name }}<br>
             <button class="btn btn-success" type="submit">Accept</button>
         </form>
     </div>
