--- a/main/appoint/templates/appoint/appoint_with_day.html
+++ b/main/appoint/templates/appoint/appoint_with_day.html
@@ -2,9 +2,9 @@
 
 {% block ButtonChangeWeek %}
     {% if is_pw_app_exists %}
-        <a href="{% url 'doctor_appoints_with_day' doctor_id prev_week %}" class="btn btn-light" role="button">Prev week</a>
+        <a href="{% url 'doctor_appoints_with_day' doctor_pk prev_week %}" class="btn btn-light" role="button">Prev week</a>
     {% endif %}
     {% if is_nw_app_exists %}
-        <a href="{% url 'doctor_appoints_with_day' doctor_id next_week %}" class="btn btn-info" role="button">Next week</a>
+        <a href="{% url 'doctor_appoints_with_day' doctor_pk next_week %}" class="btn btn-info" role="button">Next week</a>
     {% endif %}
 {% endblock ButtonChangeWeek %}
