--- a/main/appoint/templates/appoint/layout.html
+++ b/main/appoint/templates/appoint/layout.html
@@ -22,7 +22,11 @@
             </nav>
             <nav class="header_nav_account">
                 {% if user.is_authenticated %}
-                    <a class="header_link" href="{% url 'user_detail' user.pk %}">Profile</a>
+                    {% if user.is_customer %}
+                        <a class="header_link" href="{% url 'user_detail' user.pk %}">Profile</a>
+                    {% elif user.is_doctor %}
+                        <a class="header_link" href="{% url 'doctor_detail' user.pk %}">Profile</a>
+                    {% endif %}
                     <a class="header_link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
                     <a class="header_link" href="{% url 'login' %}">Login</a>
