Add dashboard for Doctor and Moderator, add Register forms and Appointment form, add Group, add create_appoint view, turn on appoint/tests, modify templates

--- a/main/appoint/templates/appoint/layout.html
+++ b/main/appoint/templates/appoint/layout.html
@@ -25,7 +25,10 @@
                     {% if user.is_customer %}
                         <a class="header_link" href="{% url 'user_detail' user.pk %}">Profile</a>
                     {% elif user.is_doctor %}
+                        <a class="header_link" href="{% url 'doctor_dashboard' user.pk %}">Dashboard</a>
                         <a class="header_link" href="{% url 'doctor_detail' user.pk %}">Profile</a>
+                    {% elif user.is_moderator %}
+                        <a class="header_link" href="{% url 'moderator_dashboard' %}">Moderator dashboard</a>
                     {% endif %}
                     <a class="header_link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
