--- a/main/appoint/templates/appoint/create_appoint.html
+++ b/main/appoint/templates/appoint/create_appoint.html
@@ -9,7 +9,7 @@
 
 
 {% block BodyContent %}
-    <div class="create_appoint">
+    <div class="create_appoint_doctor">
         {{ user.get_full_name }}<br>
         <form method="post">
             {% csrf_token %}
