--- a/main/appoint/templates/appoint/moderator_dashboard.html
+++ b/main/appoint/templates/appoint/moderator_dashboard.html
@@ -10,7 +10,7 @@
     <a href="{% url 'register_doctor' %}" class="btn btn-dark" role="button">Create doctor</a><br>
     <h1>Change Doctor</h1>
     <h1>Delete Doctor</h1>
-    <h1>Create new Appoint</h1>
+    <a href="{% url 'create_appoint_moderator' %}" class="btn btn-warning" role="button">Create appointment</a><br>
     <h1>Create a lot Appoints</h1>
     <h1>Change Appoint</h1>
     <h1>Delete Appoint</h1>
