Add create_few_appoints view, add new form, fix displaying next week appoints, fix bug appoint.html #10, modify design

--- a/main/appoint/static/appoint/css/appoint.css
+++ b/main/appoint/static/appoint/css/appoint.css
@@ -82,8 +82,18 @@ body {
 
 .row {
     margin: 0;
+}
+
+.available_appoint {
     background: #EBDEF0;
     border: 2px solid #669999;
+    border-radius: 15px;
+}
+
+.occupied_appoint {
+    background: #8A496B;
+    border: 2px solid #669999;
+    border-radius: 15px;
 }
 
 .appoint_detail {
