--- a/main/appoint/templates/appoint/moderator_dashboard.html
+++ b/main/appoint/templates/appoint/moderator_dashboard.html
@@ -11,7 +11,7 @@
     <h1>Change Doctor</h1>
     <h1>Delete Doctor</h1>
     <a href="{% url 'create_appoint_moderator' %}" class="btn btn-warning" role="button">Create appointment</a><br>
-    <h1>Create a lot Appoints</h1>
+    <a href="{% url 'create_few_appoints' %}" class="btn btn-dark" role="button">Create few appointments</a><br>
     <h1>Change Appoint</h1>
     <h1>Delete Appoint</h1>
 {% endblock %}
