--- a/main/appoint/static/appoint/css/appoint.css
+++ b/main/appoint/static/appoint/css/appoint.css
@@ -96,6 +96,43 @@ body {
     border-radius: 15px;
 }
 
+.index_doctor_container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    height: calc(100vh - 124px);
+    
+    flex-flow: column wrap;
+
+    overflow: hidden;
+}
+
+
+.index_doctor_block {
+    margin: 0 10px 10px 0;
+    padding: 10px;
+    border: 1px solid #c2d6d6;
+    border-radius: 12px;
+    min-width: 150px;
+}
+
+.index_doctor_block ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.index_doctor_block p {
+    margin-bottom: 10px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.index_doctor_block li {
+    font-family: 'Poppins', sans-serif;
+    margin: 0 0 3px 10px;
+}
+
 .appoint_detail {
 
 }
