--- a/main/userauth/templates/userauth/register.html
+++ b/main/userauth/templates/userauth/register.html
@@ -12,7 +12,7 @@
         <form method="post" class="form-group">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-success">Register</button>
+            <button type="submit" class="btn btn-success">Create {{ user_type }}</button>
         </form>
     </div>
 {% endblock BodyContent %}
